ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 8080
      targetPort: 8080
