ping_pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong
  namespace: exercises
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apps.local
      http:
        paths:
          - path: /(pingpong.*)
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  number: 8080
